--- a/profiles.yml
+++ b/profiles.yml
@@ -4,8 +4,8 @@ jaffle_shop:
    databricks_job:
      type: databricks
      method: http
-     schema: dbt_test_schema2
-     host: adb-7064161269814046.2.staging.azuredatabricks.net
-     http_path: /sql/1.0/endpoints/63a09d45bc0b0720
+     schema: "default"
+     host: "{{ env_var('DBT_HOST') }}"
+     http_path: "sql/protocolv1/o/{{ env_var('DBT_ORG_ID') }}/{{ env_var('DBT_CLUSTER_ID') }}"
      token: "{{ env_var('DBT_ACCESS_TOKEN') }}"
 
