--- a/profiles.yml
+++ b/profiles.yml
@@ -4,7 +4,7 @@ jaffle_shop:
    databricks_job:
      type: databricks
      method: http
-     schema: "default"
+     schema: dbt_cluster_schema
      host: "{{ env_var('DBT_HOST') }}"
      http_path: "sql/protocolv1/o/{{ env_var('DBT_ORG_ID') }}/{{ env_var('DBT_CLUSTER_ID') }}"
      token: "{{ env_var('DBT_ACCESS_TOKEN') }}"
