--- a/profiles.yml
+++ b/profiles.yml
@@ -4,8 +4,8 @@ jaffle_shop:
    databricks_job:
      type: databricks
      method: http
-     schema: dbt_cluster_schema
-     host: "{{ env_var('DBT_HOST') }}"
-     http_path: "sql/protocolv1/o/{{ env_var('DBT_ORG_ID') }}/{{ env_var('DBT_CLUSTER_ID') }}"
+     schema: dbt_test_schema_classic
+     host: adb-7064161269814046.2.staging.azuredatabricks.net
+     http_path: /sql/1.0/endpoints/ef223cdc11b6de12
      token: "{{ env_var('DBT_ACCESS_TOKEN') }}"
 
